Kubernetes/NetworkPolicy/NameSpaceToNamespacePolicy/namespace-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    access: allowed
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
