Kubernetes/NetworkPolicy/NameSpaceToNamespacePolicy/firefox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
      - name: firefox
        image: busybox
        command: [ "sleep", "3600" ]
