Kubernetes/NetworkPolicy/NameSpaceToNamespacePolicy/network-policies-Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: firefox
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
      podSelector:
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 80
